--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,13 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
+  fonts:
+    - family: Montserrat
+      fonts:
+        - asset: fonts/Montserrat.ttf
+    - family: MontserratBold
+      fonts:
+        - asset: fonts/MontserratBold.ttf
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
