Added checking the ethernet connection function

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   dio:
   dio_http_cache:
   intl: ^0.16.1
+  connectivity: ^3.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
