--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   dio_http_cache:
   intl: ^0.16.1
   connectivity: ^3.0.2
+  supercharged: ^2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
