--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   intl: ^0.16.1
   connectivity: ^3.0.2
   supercharged: ^2.0.0
+  crypt: ^3.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
