--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   connectivity: ^3.0.2
   supercharged: ^2.0.0
   crypt: ^3.0.1
+  shared_preferences: ^2.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
