--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   supercharged: ^2.0.0
   crypt: ^3.0.1
   shared_preferences: ^2.0.5
+  top_snackbar_flutter: ^1.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
