--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   connectivity: ^3.0.2
   supercharged: ^2.0.0
   crypt: ^3.0.1
+  image_picker: ^0.6.7+22
   shared_preferences: ^2.0.5
   top_snackbar_flutter: ^1.0.0
   flutter_launcher_icons: "^0.7.0"
